# crypto_arbitrage

./: 4cmodel.md  README.md  pyproject.toml
arbitrage_app/: main.py
arbitrage_app/config/: exchanges_config.yaml
arbitrage_app/market_data_fetcher/: BaseFetcher.py  BinanceFetcher.py  ExampleExchange.py  KrakenFetcher.py  exchange_data_fetcher.py
arbitrage_app/utils/: config_reader.py
kafka-docker/: docker-compose.yml
src/: project_structure.md  settings.py
src/arbitrage/: fetch_market_data.py  naive_file.py
src/config/: exchanges_config.yaml  kafka_config.yaml
src/messaging/: consumer.py  producer.py
src/models/: UnifiedMarketData.py
src/services/: data_fetcher.py
src/utils/: message_translator.py
