[tool.poetry]
name = "crypto-arbitrage"
version = "0.1.0"
description = ""
authors = ["bertek <81099969+albertoecf@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
